data/derived/comb/progs/unify/prog2237.ml.out
Characters 48-52:
  let base = fs(fs) in
               ^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
